<resources>
    <string name="app_name">立卓条码</string>
    <string name="LogIn">登录</string>
    <string name="Quit">退出</string>
    <string name="User">用户:</string>
    <string name="PassWord">密码:</string>
    <string name="User_Name">请输入帐号</string>
    <string name="Pass_Word">请输入密码</string>
    <string name="Remember_PassWord">记住密码</string>
    <string name="Remember_User_Name">记住用户</string>
    <string name="Setting">设置</string>
    <string name="LiZhuoCode">立卓条码</string>
    <string name="SelectProject">请选择项目</string>
    <string name="Project">项目:</string>
    <string name="TitleToast">提示信息</string>
    <string name="ExitApp">退出APP</string>
    <string name="EditIP">请输入服务器IP地址</string>
    <string name="SaveSetting">保存设置</string>
    <string name="ServerIPInput">服务器</string>
    <string name="Yes">是</string>
    <string name="No">否</string>
    <string name="MES">生产作业</string>
    <string name="WMS">物流作业</string>
    <string name="LiZuoAddress">http://www.lzbarcode.com</string>
    <string name="GetHouse">入库作业</string>
    <string name="PutHouse">出库作业</string>
    <string name="Commit">调拨作业</string>
    <string name="Check">盘点作业</string>
    <string name="InputPrinterIP">网络打印机</string>
    <string name="PleaseInputPrinterIP">请输入打印机IP</string>
    <string name="SettingPrintPort">打印机端口号</string>
    <string name="PleaseSettingPrintPort">请输入打印机端口号</string>
    <string name="Ensure">确定</string>
    <string name="ScanOut">扫描出库</string>
    <string name="PleaseScanInput">请直接扫描入库</string>
    <string name="PleaseCheck">请直接开始盘点</string>
    <string name="ScanInputLibrary">扫描入库</string>
    <string name="ScanInput">扫描入库：</string>
    <string name="ScanQuit">扫描出库：</string>
    <string name="Replace">替换</string>
    <string name="PleaseScan">请直接扫描出库</string>
    <string name="DeliverGoodsNumber">通知单号:</string>
    <string name="OutLibraryBoxNumber">出库总箱数:</string>
    <string name="atPresentScanInfo">当前扫描信息:</string>
    <string name="Product">产品:</string>
    <string name="BoxSum">箱号:</string>
    <string name="Number">个数:</string>
    <string name="UpLoadTime">上传时间:</string>
    <string name="OutLibraryScanDetail">只显示未执行完的物料</string>
    <string name="AlreadyScanSum">已扫描箱数:</string>
    <string name="Submit">提 交</string>
    <string name="PleaseInputBoxSum">请输入出库箱号</string>
    <string name="OutLibrary">出库</string>
    <string name="OutLibraryTime">业务日期:</string>
    <string name="CheckLibraryType">盘点类型:</string>
    <string name="CheckHouse">盘点仓库:</string>
    <string name="Close">取 消</string>
    <string name="ManualOperationInput">手动输入</string>
    <string name="Time">通知日期 ：</string>
    <string name="House">发货仓库：</string>
    <string name="BusType">类型:</string>
    <string name="Unit">往来单位：</string>
    <string name="BoxNumber">箱数：</string>
    <string name="ConnectPrint">重新连接打印机</string>
    <string name="RepairTag">补标</string>
    <string name="AtPresentBoxNo">当前箱号:</string>
    <string name="Popup">弹出键盘</string>
    <string name="UpLoadingTime">上传时间:</string>
    <string name="ScanProduct">产品</string>
    <string name="ScanSpecification">规格</string>
    <string name="ScanShouldNumber">应发个数</string>
    <string name="ScanYetNumber">已发个数</string>
    <string name="SelectOutLibrary">选择出库通知单</string>
    <string name="SelectInputLibrary">选择入库通知单</string>
    <string name="SelectSumLibrary">选择盘点通知单</string>
    <string name="CommitLibrary">直接调拨通知单</string>
    <string name="QuitCommitLibrary">出库调拨通知单</string>
    <string name="InputCommitLibrary">入库调拨通知单</string>
    <string name="CastAbout">搜索</string>
    <string name="checkSave">结案</string>
    <string name="CheckMaterial">盘点物料:</string>
    <string name="Select">查询</string>
    <string name="accountNumber">账存数量:</string>
    <string name="barcodeName">条码文本:</string>
    <string name="checkNumber">盘点数量:</string>
    <string name="diffNumber">差异数量:</string>
    <string name="barcodeText">条码文本:</string>
    <string name="controlType">管控类型:</string>
    <string name="checkStatus">盘点状态:</string>
    <string name="BackMainRV">返回总出库单列表</string>
    <string name="SelectGetLibrary">选择入库通知单</string>
    <string name="OutLibrarySum">出库单号:</string>
    <string name="InputLibrarySum">入库单号:</string>
    <string name="LibraryCode">通知单号:</string>
    <string name="OutLibraryWarehouse">仓库名称:</string>
    <string name="OutLibraryType">出库类型:</string>
    <string name="InputLibraryType">入库类型:</string>
    <string name="CommitStyle">调拨方式:</string>
    <string name="InputWareHouse">收货仓库:</string>
    <string name="OutWareHouse">出库仓库:</string>
    <string name="DirectCommit">直接调拨</string>
    <string name="InputCommit">入库调拨</string>
    <string name="UpLoad">加载中</string>
    <string name="Stop">停</string>
    <string name="materID">物料编号:</string>
    <string name="nameRoot">品名规格:</string>
    <string name="shouldSend">应发数量:</string>
    <string name="shouldReceive">应收数量:</string>
    <string name="HouseSpace">仓位:</string>
    <string name="alreadySend">已发数量:</string>
    <string name="alreadyReceive">已收数量:</string>
    <string name="statistics">基本单位:</string>
    <string name="commonunit">常用单位:</string>
    <string name="thisSend">本次发货:</string>
    <string name="thisEnter">本次收货:</string>
    <string name="noSend">未发数量:</string>
    <string name="noReceive">未收数量:</string>
    <string name="ScanNumber">数量:</string>
    <string name="scanData">扫描数据:</string>
    <string name="scaning">开始扫码</string>
    <string name="stopScan">停止扫码</string>
    <string name="scaningdata">扫码数据：</string>
    <string name="cutoff">/</string>
    <string name="finish" translatable="false">完成</string>
    <string name="Save">保 存</string>
    <string name="label">标签模板:</string>
    <string name="Clear">撤 回</string>
    <string name="UnLockAll">清空所有单据分录锁</string>
    <string name="DircetAllotAction">直接调拨</string>
    <string name="DircetAllotNotification">选择直接调拨单</string>
    <string name="DirectAllotNotification_FCode">调拨单号:</string>
    <string name="DirectAllotNotification_FData">业务日期:</string>
    <string name="DirectAllotNotification_FOutStockName">调出仓库:</string>
    <string name="DirectAllotNotification_FInStockName">调入仓库:</string>
    <string name="PleaseInputSum">请输入数量:</string>
    <string name="TheCurrentMaterialCode">物料编号:</string>
    <string name="ShouldAllot">应调数量:</string>
    <string name="AlreadyAllot">已调数量:</string>
    <string name="ThisAllot">本次调货:</string>
    <string name="NotAllot">未调数量:</string>
    <string name="Refresh">刷新</string>
    <string name="OutAllotNotification">调拨出库通知</string>
    <string name="InAllotNotification">调拨入库通知</string>
    <string name="OutAllotScan">调拨出库扫描</string>
    <string name="InAllotScan">调拨入库扫描</string>
    <string name="SelectMGrouping">选择物料分组</string>
    <string name="NextStep">下一步</string>
    <string name="SelectM">选择物料</string>
    <string name="MName">物料名称</string>
    <string name="PortNumber">端口号</string>
    <string name="PleasePortNumber">请输入端口号</string>
    <string name="VIPUser">会员账号</string>
    <string name="VIPPassWord">会员密码</string>
    <string name="PleaseVIPUser">请输入会员账号</string>
    <string name="PleaseVIPPassWord">请输入会员密码</string>
    <string name="SelectService">选择服务器</string>
    <string name="PrivateYun">私有云</string>
    <string name="PublicYun">公有云</string>
    <string name="Batch">批 次 号:</string>
    <string name="ProductNameMode">品称规格:</string>
    <string name="ModificationScanData">扫码清单</string>
    <string name="DelectScanData">删除</string>
</resources>
