<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <LinearLayout style="@style/AppCustomBar">

        <TextView
            android:id="@+id/Back"
            style="@style/AppCustomBarBack" />

        <TextView
            android:id="@+id/BarText"
            style="@style/AppCustomBarText"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/ScanOutLibrary" />

        <TextView
            android:id="@+id/TV_Replace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginTop="22sp"
            android:layout_weight="1"
            android:background="@drawable/circularbead_purple"
            android:gravity="center"
            android:text="@string/Replace"
            android:textColor="@color/White"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_State"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/SelectItemYellow"
                android:gravity="center"
                android:text="@string/PleaseScan"
                android:textColor="@color/Black"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:background="@color/ScanGray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/DeliverGoodsNumber" />

                <TextView
                    android:id="@+id/TV_DeliverGoodsNumber"
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/Time" />

                <TextView
                    android:id="@+id/TV_Time"
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/House" />

                <TextView
                    android:id="@+id/TV_House"
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/BusType" />

                <TextView
                    android:id="@+id/TV_BusType"
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/Unit" />

                <TextView
                    android:id="@+id/TV_Unit"
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:background="@color/AtPresentScanInfo"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.4"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/atPresentScanInfo"
                    android:textColor="@color/White"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/TV_AnewConnectPrint"
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="3"
                    android:background="@drawable/circularbead_purple"
                    android:gravity="center"
                    android:text="@string/ConnectPrint"
                    android:textColor="@color/White"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/TV_PatchMend"
                    style="@style/ScanOutLibraryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="3"
                    android:background="@drawable/circularbead_purple"
                    android:gravity="center"
                    android:text="@string/RepairTag"
                    android:textColor="@color/White"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Product" />

                <TextView
                    android:id="@+id/TV_Product"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />

                <TextView
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/BoxSum" />

                <TextView
                    android:id="@+id/TV_BoxSum"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical" />

                <TextView
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Number" />

                <TextView
                    android:id="@+id/TV_Number"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <TextView
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.7"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/AtPresentBoxNo"
                    android:textSize="11sp" />

                <EditText
                    android:id="@+id/ET_ScanData"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="7"
                    android:background="@drawable/edittext_normal"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/TV_PopupKeyboard"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:background="@drawable/circularbead_purple"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/Popup"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/TV_EnsureScan"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="2.5"
                    android:background="@drawable/circularbead_purple"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/Ensure"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/UpLoadingTime"
                    android:gravity="center_vertical"
                    android:paddingLeft="3dp"/>

                <TextView
                    android:id="@+id/TV_PresentTime"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center_vertical" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_weight="0.9"
            android:background="@drawable/edittext_normal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4" />

                <TextView
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/OutLibraryScanDetail"
                    android:textColor="@color/Black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

                <TextView
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/AlreadyScanSum"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/TV_AlreadyScanSum"
                    style="@style/ScanBlueText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textColor="@color/Black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@color/ScanGray"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ScanProduct"
                    android:textColor="@color/Black" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/Black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ScanSpecification"
                    android:textColor="@color/Black" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/Black" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="@string/ScanShouldNumber"
                    android:textColor="@color/Black" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/Black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="@string/ScanYetNumber"
                    android:textColor="@color/Black" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/RV_ScanInfoTable"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9" />

            <TextView
                android:id="@+id/TV_Submit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:background="@drawable/circularbead_purple"
                android:gravity="center"
                android:text="@string/Submit"
                android:textColor="@color/White"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>