<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/InfoRelevance"
    android:orientation="vertical">

    <LinearLayout style="@style/AppCustomBar">

        <TextView
            android:id="@+id/Back"
            style="@style/AppCustomBarBack" />

        <TextView
            android:id="@+id/BarText"
            style="@style/AppCustomBarText"
            android:text="@string/Setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/ServerIPInput"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/IP_ET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:hint="@string/EditIP"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/SaveIPAddress_Bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/orange"
            android:text="@string/SaveSetting"
            android:textColor="@color/White"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

</LinearLayout>