<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toast"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/ServerIPInput"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_IP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/edittext_normal"
            android:gravity="center_vertical"
            android:hint="@string/EditIP"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_margin="3dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/PortNumber"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_Port"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/edittext_normal"
            android:gravity="center_vertical"
            android:hint="@string/PleasePortNumber"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_margin="3dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

</LinearLayout>