<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/AppCustomBar">

        <TextView
            android:id="@+id/Back"
            style="@style/AppCustomBarBack" />

        <TextView
            android:id="@+id/BarText"
            style="@style/AppCustomBarText"
            android:gravity="center_vertical"
            android:paddingLeft="50dp"
            android:text="@string/SelectM" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RV_Seleect_M_Grouping"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_Close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/circularbead_purple"
            android:gravity="center"
            android:text="@string/Close"
            android:textColor="@color/White"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_CastAbout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/circularbead_purple"
            android:gravity="center"
            android:text="@string/NextStep"
            android:textColor="@color/White"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>